# cbtc-media-day

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  README.md  docker-compose.yml  justfile  pyproject.toml
.github/actions/terraform-qa/: action.yml
.github/workflows/: deploy-infra_global.yml  deploy-lambda_authorizer.yml  deploy-lambda_content.yml  deploy.yml  deploy_content.yml  deploy_infra_global.yml  lint.yml  lint_infra.yml  lint_python.yml  lint_services-pipelines.yml  lint_services.yml  localstack-test.yml  template_tests-ut.yml  terraform.yml  test.yml  tests-e2e.yml  tests-ut.yml
app/: justfile  netlify.toml  package.json
app/src/: App.jsx  index.css  setupTests.js
app/src/components/: DniForm.jsx  DniForm.test.jsx  DocumentIdForm.jsx  DocumentIdForm.test.jsx
docs/: README.md
docs/architecture/: overview.md
docs/user_stories/: US-001.md  US-002.md  US-003.md  US-004.md  US-005.md
infra/: infra.recipes.just  justfile
infra/bootstrap/: justfile  providers.tf  s3.tf  variables.tf  versions.tf
infra/global/: .config.dev.tfbackend  .config.local.tfbackend  backend.tf  justfile  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/services/: .terraform.lock.hcl  apigw.tf  apigw_cors.tf  authorizer.tf  backend.tf  content.tf  cors.tf  justfile  localstack_providers_override.tf  main.tf  outputs.tf  variables.tf  versions.tf
pipelines/: justfile
pipelines/media_day/: pyproject.toml
pipelines/media_day/src/: main.py
pipelines/media_day/tests/: test_main.py
pipelines/player_data_uploader/: justfile  pyproject.toml
pipelines/player_data_uploader/src/: __init__.py  logger.py  main.py
pipelines/player_data_uploader/tests/: __init__.py  test_main.py
pipelines/players_tutors/: justfile  pyproject.toml
pipelines/players_tutors/src/: __init__.py  main.py
pipelines/players_tutors/tests/: test_main.py
services/: justfile
services/authorizer/: build.sh  justfile  pyproject.toml
services/authorizer/src/: __init__.py  handler.py
services/authorizer/tests/: __init__.py  test_authorizer.py
services/content_service/: README.md  build.sh  justfile  pyproject.toml
services/content_service/src/: handler.py
services/content_service/tests/: test_handler.py
services/example-service/: README.md
services/example-service/src/: handler.py
services/example-service/tests/: test_handler.py
tests/: justfile
tests/functional/: conftest.py  us001_test.py  us_001_test.py  us_002_test.py  us_003_test.py  us_004_test.py
