[project]
name = "player-data-uploader"
version = "0.1.0"
description = "Pipeline to generate JSON data from media day CSV for upload"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "boto3>=1.42.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
